--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h1>GRUPO NUEVA PIEL</h1>
         <img src="./img/piel.png" alt="piel" class="piel">
-        <input type="button" value="NUESTROS TRABAJOS" class="botón">
+        <button>NUESTROS TRABAJOS</button>
     </div>
 
     <div class="seccion-2">
@@ -133,34 +133,144 @@
     <div class="seccion-7">
         <div class="violeta2"></div>
         <h2>TRANSMEDIA</h2>
-        <h3>Redes sociales de los personajes</h3>
+        <h3>Redes sociales</h3>
 
         <div class="redes">
-            <div class="redes1">
-                <img src="./img/ig laura.png" alt="IG Laura">
-                <p>Primero comenzamos creando la <a
-                        href="https://www.instagram.com/laurainbloomm?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">cuenta
-                        de Instagram de Laura</a> para graficar las distintas acciones que suceden en la historia</p>
+            <div class="slider-wrapper">
+                <div class="card-list">
+
+                    <div class="redes1">
+                        <div class="img-1">
+                            <img src="./img/ig laura.png" alt="IG de Laura" class="user-image">
+                        </div>
+
+                        <div class="text">
+                            <h2 class="nombres-personajes">IG de Laura</h2>
+                            <p class="descripcion">Comenzamos creando el IG de Laura para que la
+                                historia
+                                se desarrolle a través de sus posteos e historias y además, se muestre su personalidad y
+                                los cambios que va a ir experimentando</p>
+                            <button class="seguir"
+                                onclick="window.location.href='https://www.instagram.com/laurainbloomm?igsh=MWJ2Y2RveThoajlydg=='">Ver
+                                su perfil</button>
+                        </div>
+
+                    </div>
+
+                    <div class="redes2">
+                        <div class="img-2">
+                            <img src="./img/spotify.png" alt="Spotify de Laura" class="user-image">
+                        </div>
+
+                        <div class="text2">
+                            <h2 class="nombres-personajes">Spotify de Laura</h2>
+                            <p class="descripcion">Seguimos creando el perfil de Spotify de Laura en el que se va
+                                ambientando y debatiendo sobre los cambios de su entorno</p>
+                            <button class="seguir"
+                                onclick="window.location.href='https://open.spotify.com/show/27Va4qDBlZ7e8BGozrD8UP?si=IlypZYGHT3W_6vnNfFlmKQ'">Ver
+                                su perfil</button>
+                        </div>
+
+                    </div>
+
+
+                    <div class="redes3">
+                        <div class="img-3">
+                            <img src="./img/youtube.png" alt="YouTube de Laura" class="user-image">
+                        </div>
+
+                        <div class="text">
+                            <h2 class="nombres-personajes">YouTube de Laura</h2>
+                            <p class="descripcion">Agregamos una cuenta de YouTube para que los podcasts lleguen
+                                a más personas</p>
+                            <button class="seguir"
+                                onclick="window.location.href='https://youtube.com/@laurainbloom?si=9HhN5W-nPKhmlYkb'">Ver
+                                su perfil</button>
+                        </div>
+                    </div>
+
+                    <div class="redes4">
+                        <div class="img-4">
+                            <img src="./img/ministerio.png" alt="Ministerios de la Armonía" class="user-image">
+                        </div>
+
+                        <div class="text2">
+                            <h2 class="nombres-personajes">IG del Ministerio</h2>
+                            <p class="descripcion">Seguimos con la cuenta de Instagram del Ministerio de la
+                                Armonía en la que se publicó información sobre los cambios a nivel tecnológico,
+                                social y cultural del nuevo mundo</p>
+                            <button class="seguir"
+                                onclick="window.location.href='https://www.instagram.com/ministeriodelaarmonia?igsh=Mmx5YWV3Y3JuZzN5'">Ver
+                                cuenta</button>
+                        </div>
+
+                    </div>
+
+
+                    <div class="redes5">
+                        <div class="img-5">
+                            <img src="./img/twitter mabel.png" alt="Twitter de Mabel" class="user-image">
+                        </div>
+
+                        <div class="text">
+                            <h2 class="nombres-personajes">Twitter de Mabel</h2>
+                            <p class="descripcion">Continuamos con la cuenta de Twitter (X) de Mabel en la que
+                                se contaron partes de la historia y se mostró el desarrollo de su personalidad,
+                                pasando de ser una persona más seria y cerrada a ser más empática y amigable</p>
+                            <button class="seguir"
+                                onclick="window.location.href='https://x.com/mabelarquitect_?t=nU-HaB17nn_GKmjz0B17ww&s=09'">Ver
+                                cuenta</button>
+                        </div>
+
+                    </div>
+
+
+                    <div class="redes6">
+                        <div class="img-6">
+                            <img src="./img/twitter de Ariel.png" alt="Twitter de Ariel" class="user-image">
+                        </div>
+
+                        <div class="text2">
+                            <h2 class="nombres-personajes">Twitter de Ariel</h2>
+                            <p class="descripcion">El tercer personaje que presentamos es a Ariel, el villano de
+                                la historia, el cual va a utilizar Twitter (X) para mostrar su personalidad
+                                violenta y defenderse de las acusaciones sobre su plan secreto</p>
+                            <button class="seguir"
+                                onclick="window.location.href='https://x.com/ARIEL_LESCAM?t=FgEVxpeuRhLqU4x3NWJO5Q&s=09'">Ver
+                                su perfil</button>
+                        </div>
+
+                    </div>
+
+
+                    <div class="redes7">
+                        <div class="img-7">
+                            <img src="./img/twitter del Grupo.png" alt="Grupo No-Robots" class="user-image">
+                        </div>
+
+                        <div class="text">
+                            <h2 class="no-robots">Twitter del <br>
+                                Grupo No-Robots</h2>
+                            <p class="descripcion">Por último, creamos la cuenta del Grupo No-Robots como un
+                                medio para exponer el plan secreto de Ariel y mostrar los últimos
+                                acontecimientos de la historia</p>
+                            <button class="seguir"
+                                onclick="window.location.href='https://x.com/GrupoNoRobots?t=UfQsfC4knicSeJrpQSp_PQ&s=09'">Ver
+                                cuenta</button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="redes2">
-                <img src="./img/twitter mabel.png" alt="Twitter Mabel">
-                <p>Seguimos con la <a href="https://x.com/MabelArquitect?s=09">cuenta de Twitter de Mabel</a> donde
-                    expresa
-                    sus
-                    ideas y posteriormente, expondrá el proceso de investigación</p>
+
+        </div>
+
+        <div class="seccion-8">
+            <h3>Experiencia transmedia en las calles</h3>
+            <div class="fotos">
+
             </div>
         </div>
-    </div>
-
-    <div class="seccion-8">
-        <h3>Experiencia transmedia en las calles</h3>
-        <div class="fotos">
-            <img src="./img/foto1.png" alt="foto1">
-            <img src="./img/fotos2.png" alt="fotos2">
-            <img src="./img/fotos3.png" alt="fotos3">
-        </div>
-    </div>
 </body>
 
 
