--- a/index.html
+++ b/index.html
@@ -265,12 +265,353 @@
 
         </div>
 
-        <div class="seccion-8">
-            <h3>Experiencia transmedia en las calles</h3>
-            <div class="fotos">
+    </div>
+
+    <h2 class="experiencia">EXPERIENCIA EN LAS CALLES</h2>
+
+
+    <div class="seccion-8">
+
+        <div class="titulos">
+            <h3>08/10/2024</h3>
+            <h4>Grafitti del Ministerio de la Armonía: 67 entre 11 y 12</h4>
+            <p>Como primera experiencia, realizamos el grafitti del ministerio de la salud usando un polvo
+                fosforescente de color azul, mezclado con barniz, que se recarga con la luz solar para brillar en la
+                oscuridad. Además, agregamos unas huellas de perro en el piso que te guián al grafitti que está en una
+                pared e incorporamos el perfil de IG del ministerio.
+            </p>
+
+        </div>
+
+        <div class="contenido">
+
+            <div class="carousel-transmedia">
+
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 6</div>
+                    <img src="./img/día.jpeg" alt="">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 6</div>
+                    <img src="./img/día2.jpeg" alt="">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 6</div>
+                    <img src="./img/noche.jpg" alt="">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">4 / 6</div>
+                    <img src="./img/noche2.jpg" alt="">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">5 / 6</div>
+                    <img src="./img/noche3.jpg" alt="">
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">6 / 6</div>
+                    <img src="./img/huellas.jpg" alt="">
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                    <span class="dot" onclick="currentSlide(4)"></span>
+                    <span class="dot" onclick="currentSlide(5)"></span>
+                    <span class="dot" onclick="currentSlide(6)"></span>
+                </div>
 
             </div>
+
         </div>
+
+    </div>
+
+    <div class="seccion-9">
+        <div class="titulos2">
+            <h3>10/10/2024</h3>
+            <h4>Cartel de Arqvita: 13 entre 69 y 70</h4>
+            <p>Como segunda experiencia, colocamos un cartel sobre la vivienda cooperativa "Aurora" realizado por la
+                empresa Arqvita donde se especifica sus características amigables con el medio ambiente y se presenta a
+                Mabel como la arquitecta principal. Además, le agregamos un QR que te lleva directo a la página web de
+                la empresa.
+            </p>
+        </div>
+
+        <div class="carousel-transmedia2">
+            <div class="mySlides2 fade2">
+                <div class="numbertext2">1 / 6</div>
+                <img src="./img/cartel.jpg" alt="">
+            </div>
+
+            <div class="mySlides2 fade2">
+                <div class="numbertext2">2 / 6</div>
+                <img src="./img/cartel2.jpg" alt="">
+            </div>
+
+            <div class="mySlides2 fade2">
+                <div class="numbertext2">3 / 6</div>
+                <img src="./img/cartel3.jpg" alt="">
+            </div>
+
+            <div class="mySlides2 fade2">
+                <div class="numbertext2">4 / 6</div>
+                <img src="./img/cartel4.jpg" alt="">
+            </div>
+
+            <div class="mySlides2 fade2">
+                <div class="numbertext2">5 / 6</div>
+                <img src="./img/cartel5.jpg" alt="">
+            </div>
+
+            <div class="mySlides2 fade2">
+                <div class="numbertext2">6 / 6</div>
+                <img src="./img/cartel6.jpg" alt="">
+            </div>
+
+            <a class="prev2" onclick="plusSlides2(-1)">&#10094;</a>
+            <a class="next2" onclick="plusSlides2(1)">&#10095;</a>
+
+
+            <div style="text-align:center">
+                <span class="dot2" onclick="currentSlide(1)"></span>
+                <span class="dot2" onclick="currentSlide(2)"></span>
+                <span class="dot2" onclick="currentSlide(3)"></span>
+                <span class="dot2" onclick="currentSlide(4)"></span>
+                <span class="dot2" onclick="currentSlide(5)"></span>
+                <span class="dot2" onclick="currentSlide(6)"></span>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="seccion-10">
+        <h3>15/10/2024</h3>
+        <p>Para la segunda semana, repartimos folletos con acceso a la revista online donde se muestran las
+            características del futuro gracias a los cambios realizados en la sociedad y se presenta la Nueva Piel.</p>
+
+        <div class="folletos">
+            <img src="./img/revista.jpg" alt="">
+            <img src="./img/revista2.jpg" alt="">
+            <img src="./img/revista3.jpg" alt="">
+        </div>
+
+        <button class="Revista"
+            onclick="window.location.href='https://heyzine.com/flip-book/45d4cb01d4.html?fbclid=PAY2xjawGiJPFleHRuA2FlbQIxMQABpgVGjJP12KdQBTLkZ9QPL8EDpbN85_eRRGF330B_6LiwUahxdbcCcJ8chQ_aem_2rXHNkC1uakXyjBMDMlOFg'">Ver
+            revista online</button>
+
+    </div>
+
+    <div class="seccion-11">
+
+        <div class="titulos3">
+
+            <h3>16/10/2024</h3>
+            <h4>Grafittis del Grupo No Robots: 62 entre 11 y 12</h4>
+            <p>Al día siguiente, continuamos con grafittis con el hashtag #noRobots para presentar a esta agrupación que
+                se
+                encarga de exponer los planes de Ariel y ayudar a las protagonistas a encarcelarlo.</p>
+        </div>
+
+        <div class="carousel-transmedia3">
+
+            <div class="mySlides3 fade3">
+                <div class="numbertext3">1 / 6</div>
+                <img src="./img/no-robots.jpg" alt="">
+            </div>
+
+            <div class="mySlides3 fade3">
+                <div class="numbertext3">2 / 6</div>
+                <img src="./img/no-robots2.jpg" alt="">
+            </div>
+
+            <div class="mySlides3 fade3">
+                <div class="numbertext3">3 / 6</div>
+                <img src="./img/no-robots3.jpg" alt="">
+            </div>
+
+            <div class="mySlides3 fade3">
+                <div class="numbertext3">4 / 6</div>
+                <img src="./img/no-robots4.jpg" alt="">
+            </div>
+
+            <div class="mySlides3 fade3">
+                <div class="numbertext3">5 / 6</div>
+                <img src="./img/no-robots5.jpg" alt="">
+            </div>
+
+            <a class="prev3" onclick="plusSlides3 (-1)">&#10094;</a>
+            <a class="next3" onclick="plusSlides3(1)">&#10095;</a>
+
+
+            <div style="text-align:center">
+                <span class="dot3" onclick="currentSlide(1)"></span>
+                <span class="dot3" onclick="currentSlide(2)"></span>
+                <span class="dot3" onclick="currentSlide(3)"></span>
+                <span class="dot3" onclick="currentSlide(4)"></span>
+                <span class="dot3" onclick="currentSlide(5)"></span>
+            </div>
+
+
+        </div>
+
+    </div>
+
+
+    <div class="seccion-12">
+
+        <div class="titulos4">
+
+            <h3>18/10/2024</h3>
+            <h4>Tarjetas de identificación de Arqvita intervenidas: Sede Fonseca</h4>
+            <p>Continuamos con las tarjetas de identificación de la empresa Arqvita intervenidas donde aparecía el
+                código para acceder al plan secreto de Ariel dentro de la misma página web de la empresa. </p>
+        </div>
+
+        <div class="carousel-transmedia4">
+
+            <div class="mySlides4 fade4">
+                <div class="numbertext4">1 / 6</div>
+                <img src="./img/tarjetas.jpg" alt="">
+            </div>
+
+            <div class="mySlides4 fade4">
+                <div class="numbertext4">2 / 6</div>
+                <img src="./img/tarjetas2.jpg" alt="">
+            </div>
+
+            <div class="mySlides4 fade4">
+                <div class="numbertext4">3 / 6</div>
+                <img src="./img/tarjetas3.jpg" alt="">
+            </div>
+
+            <div class="mySlides4 fade4">
+                <div class="numbertext4">4 / 6</div>
+                <img src="./img//tarjetas4.jpg" alt="">
+            </div>
+
+            <div class="mySlides4 fade4">
+                <div class="numbertext4">5 / 6</div>
+                <img src="./img/tarjetas5.jpg" alt="">
+            </div>
+
+            <div class="mySlides4 fade4">
+                <div class="numbertext4">5 / 6</div>
+                <img src="./img/tarjetas6.jpg" alt="">
+            </div>
+
+            <a class="prev4" onclick="plusSlides4(-1)">&#10094;</a>
+            <a class="next4" onclick="plusSlides4(1)">&#10095;</a>
+
+
+            <div style="text-align:center">
+                <span class="dot4" onclick="currentSlide(1)"></span>
+                <span class="dot4" onclick="currentSlide(2)"></span>
+                <span class="dot4" onclick="currentSlide(3)"></span>
+                <span class="dot4" onclick="currentSlide(4)"></span>
+                <span class="dot4" onclick="currentSlide(5)"></span>
+                <span class="dot4" onclick="currentSlide(6)"></span>
+
+            </div>
+
+
+        </div>
+
+    </div>
+
+    <div class="seccion-13">
+        <h3>23/10/2024</h3>
+        <h4>Volantes del Grupo No-Robots: Sede Fonseca</h4>
+        <p>Para la tercer semana, pegamos volantes para promocionar el grupo de los No Robots y divulgar su mensaje para
+            que más gente se sume a la causa de impedir la robotización humana. </p>
+
+        <div class="volantes">
+            <img src="./img/volantes.jpg" alt="">
+            <img src="./img/volantes2.jpg" alt="">
+            <img src="./img/volantes3.jpg" alt="">
+            <img src="./img/volantes4.jpg" alt="">
+        </div>
+
+    </div>
+
+    <div class="seccion-14">
+        <h3>CABINA</h3>
+        <h4>15/11/2024</h4>
+
+        <div class="titulos5">
+            <p>Para finalizar el trabajo, comenzamos con la construcción de la experiencia la cual, va a contar con la
+                Nueva Piel como elemento principal. Comenzamos realizando una cabina de 2mts de alto por 2mts de
+                profundidad
+                y 1.5 de ancho usando vigas de durlock para la base y tornillos mariposa para hacerla desarmable.
+                Después,
+                la decoramos con telas negras por fuera y tules colgando del techo para transportar al usuario a un
+                universo
+                natural y armonioso. En el centro, colocamos una mesa desde la cual el usuario va a poder colocarse el
+                guante que va a tener la piel y agarrar diferentes alimentos, con sabores muy particulares y fáciles de
+                distinguir. Apenas empiece a degustar los distintos sabores, sus pulsaciones cardíacas van a comenzar a
+                modificarse alterando las tonalidades de la luz y las melodías que ambientan la experiencia. </p>
+        </div>
+
+        <div class="carousel-cabina">
+            <div class="mySlides5 fade5">
+                <div class="numbertext5">1 / 6</div>
+                <img src="./img/cabina5.jpeg" alt="">
+            </div>
+
+            <div class="mySlides5 fade5">
+                <div class="numbertext5">2 / 6</div>
+                <img src="./img/cabina.jpeg" alt="">
+            </div>
+
+            <div class="mySlides5 fade5">
+                <div class="numbertext5">3 / 6</div>
+                <img src="./img/cabina2.jpeg" alt="">
+            </div>
+
+            <div class="mySlides5 fade5">
+                <div class="numbertext5">4 / 6</div>
+                <img src="./img/cabina3.jpeg" alt="">
+            </div>
+
+            <div class="mySlides5 fade5">
+                <div class="numbertext5">5 / 6</div>
+                <img src="./img/cabina6.jpeg" alt="">
+            </div>
+
+            <div class="mySlides5 fade5">
+                <div class="numbertext5">5 / 6</div>
+                <img src="./img/cabina4.jpeg" alt="">
+            </div>
+
+            <a class="prev5" onclick="plusSlides5(-1)">&#10094;</a>
+            <a class="next5" onclick="plusSlides5(1)">&#10095;</a>
+
+
+            <div style="text-align:center">
+                <span class="dot5" onclick="currentSlide5(1)"></span>
+                <span class="dot5" onclick="currentSlide5(2)"></span>
+                <span class="dot5" onclick="currentSlide5(3)"></span>
+                <span class="dot5" onclick="currentSlide5(4)"></span>
+                <span class="dot5" onclick="currentSlide5(5)"></span>
+                <span class="dot5" onclick="currentSlide5(6)"></span>
+            </div>
+
+        </div>
+
+    </div>
+
+
+    <script src="./interaccion.js"></script>
+
 </body>
 
 
