--- a/index.html
+++ b/index.html
@@ -559,6 +559,8 @@
                 guante que va a tener la piel y agarrar diferentes alimentos, con sabores muy particulares y fáciles de
                 distinguir. Apenas empiece a degustar los distintos sabores, sus pulsaciones cardíacas van a comenzar a
                 modificarse alterando las tonalidades de la luz y las melodías que ambientan la experiencia. </p>
+
+                <a href="https://drive.google.com/drive/folders/1rPbW1tCsX52LpQp_56Znds3gMDbjSLnj?usp=sharing">Video de la experiencia</a>
         </div>
 
         <div class="carousel-cabina">
